Clase8/k8s/backend-service.yaml
cat > backend-service.yaml <<EOF
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend   # coincide con el label del Deployment
  ports:
  - port: 80       # puerto que el servicio expone dentro del cluster
    targetPort: 80 # puerto del contenedor nginx-api-backend
EOF
