Clase8/k8s/ingress.yaml
cat > ingress.yaml <<EOF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service   # frontend en la ruta /
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service    # backend en la ruta /api
            port:
              number: 80
EOF
